--- a/templates/list/detail.html
+++ b/templates/list/detail.html
@@ -10,7 +10,9 @@
 	      <dt class="col-sm-3">Title</dt>
 	      <dd class="col-sm-9">{{ list.title}}</dd>
 	      <dt class="col-sm-3">Description</dt>
-	      <dd class="col-sm-9">{{ list.content}}</dd>
+	      <dd class="col-sm-9">{{ list.description}}</dd>
+	      <dt class="col-sm-3">Date</dt>
+	      <dd class="col-sm-9">{{ list.timestamp}}</dd>
 	    </dl>
 
 	    </div>
