--- a/templates/list/detail.html
+++ b/templates/list/detail.html
@@ -14,7 +14,7 @@
 	      <dt class="col-sm-3">Date</dt>
 	      <dd class="col-sm-9">{{ list.timestamp}}</dd>
 	    </dl>
-
+	    <a href="{{list_entry_home_link}}" class="btn btn-info">List Entries</a>
 	    </div>
 	</div>
 	<a href="{{update_link}}" class="btn btn-success">update</a>
