--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -37,4 +37,14 @@
 	    <a href="{{fund_home_link}}" class="card-link">Go to Fund</a>
 	  </div>
 	</div>
+
+	<div class="card" style="width: 18rem;">
+	  <div class="card-body">
+	    <h5 class="card-title">List</h5>
+	    <h6 class="card-subtitle mb-2 text-muted">app</h6>
+	    <p class="card-text">an app that allows you to make list of stuff<br>
+	    like grocery list, to do list, and many more types of list</p>
+	    <a href="{{list_home_link}}" class="card-link">Go to List</a>
+	  </div>
+	</div>
 {% endblock %}
