fixed bug on list view of fund

--- a/templates/fund/list.html
+++ b/templates/fund/list.html
@@ -14,7 +14,7 @@
 			<th>category</th>
 			<th>amount</th>
 		</tr>
-		{% for entry, detail_link in income_details %}
+		{% for entry, detail_link in fund_details %}
 			<tr>
 				<td><a href="{{detail_link}}">{{entry.name}}</a></td>
 				<td>{{entry.description}}</td>
