display the statistics to the list page

--- a/templates/fund/list.html
+++ b/templates/fund/list.html
@@ -6,7 +6,10 @@
 				<a href="{{go_home_link}}" class="nav-link">Home</a>
 			</li>
 		</ul>
-
+	<p>
+		<b>Unallocated Balance: </b> {{unallocated_balance}}<br>
+		<b>Total Balance: </b> {{total_balance}}<br>
+	</p>
 	<table class="table table-striped">
 		<tr>
 			<th>name</th>
