used conten block instead of block content

--- a/templates/fund/fund_allocation.html
+++ b/templates/fund/fund_allocation.html
@@ -1,6 +1,6 @@
 {% extends fund_base.html %}
 
-{% content block %}
+{% block content %}
 	<h2>Fund Allocation</h2>
 	<form method="POST">
 		<b>Amount:</b> {{amount}}
