--- a/templates/fund/fund_allocation.html
+++ b/templates/fund/fund_allocation.html
@@ -3,9 +3,10 @@
 {% block content %}
 	<h2>Fund Allocation</h2>
 	{% if errors %}
-		<ul class="list-group">
+		<h4>Errors</h4>
+		<ul class="alert alert-danger">
 		{% for error in errors %}
-			<li class="list-group-item list-group-item-danger">{{error}}</li>
+			<li class="">{{error}}</li>
 		{% endfor %}
 		</ul>
 	{% endif %}
