--- a/templates/fund/fund_allocation.html
+++ b/templates/fund/fund_allocation.html
@@ -4,9 +4,9 @@
 	<h2>Fund Allocation</h2>
 	{% if errors %}
 		<h4>Errors</h4>
-		<ul class="alert alert-danger">
+		<ul class="list-group">
 		{% for error in errors %}
-			<li class="">{{error}}</li>
+			<li class="list-group-item list-group-item-danger">{{error}}</li>
 		{% endfor %}
 		</ul>
 	{% endif %}
