--- a/templates/fund/fund_allocation.html
+++ b/templates/fund/fund_allocation.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<h2>Fund Allocation</h2>
 	{% if errors %}
-		<h4>Errors</h4>
+		<h4 class="alert alert-danger">Errors</h4>
 		<ul class="list-group">
 		{% for error in errors %}
 			<li class="list-group-item list-group-item-danger">{{error}}</li>
