also added fund amount

--- a/templates/fund/fund_allocation.html
+++ b/templates/fund/fund_allocation.html
@@ -3,6 +3,7 @@
 {% block content %}
 	<h2>Fund Allocation</h2>
 	<b>Unallocated Balance: </b> {{unallocated_balance}}<br>
+	<b>Fund Amount: </b> {{fund_amount}}<br>
 	{% if errors %}
 		<ul class="list-group">
 		{% for error in errors %}
