added link to html page

--- a/templates/fund/detail.html
+++ b/templates/fund/detail.html
@@ -31,6 +31,7 @@
 	{% if not is_expired %}
 		<a href="{{update_link}}" class="btn btn-success">update</a>
 		<a href="{{delete_link}}" class="btn btn-danger">delete</a>
+		<a href="{{fund_allocation_link}}" class="btn btn-info">fund allocation</a>
 	{% endif %}
 
 	<a href="{{go_back_link}}" class="btn btn-info">go back</a>
