allocation button is visible all the time

--- a/templates/fund/detail.html
+++ b/templates/fund/detail.html
@@ -31,8 +31,8 @@
 	{% if not is_expired %}
 		<a href="{{update_link}}" class="btn btn-success">update</a>
 		<a href="{{delete_link}}" class="btn btn-danger">delete</a>
-		<a href="{{fund_allocation_link}}" class="btn btn-info">fund allocation</a>
 	{% endif %}
+	<a href="{{fund_allocation_link}}" class="btn btn-dark">fund allocation</a>
 
 	<a href="{{go_back_link}}" class="btn btn-info">go back</a>
 {% endblock %}
