--- a/templates/fund/fund_allocation.html
+++ b/templates/fund/fund_allocation.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 	<h2>Fund Allocation</h2>
+	<b>Fund name: </b> {{fund_name}}<br>
 	<b>Unallocated Balance: </b> {{unallocated_balance}}<br>
 	<b>Fund Amount: </b> {{fund_amount}}<br>
 	{% if errors %}
