--- a/templates/expenses/get_stats_view_ver2.html
+++ b/templates/expenses/get_stats_view_ver2.html
@@ -1,7 +1,7 @@
 {% extends 'expense_base.html' %}
 
 {% block content %}
-	<h3>I shit you not</h3>
+	<h3>Fuck this caching shit</h3>
 	    <label for="interval">Interval:</label>
 	    <select id="interval" onchange="update_chart_wrapper(this)">
 	    	<option value="WEEK">Week</option>
