fixed the entire thing!!!!!! just kidding

--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -1,7 +1,7 @@
 {% extends 'expense_base.html' %}
 
 {% block content %}
-	<h3>Ligth Wood Laminate</h3>
+	<h3>Ligth Wood Laminate6</h3>
 	    <label for="interval">Interval:</label>
 	    <select id="interval" onchange="update_chart(this)">
 	    	<option value="WEEK">Week</option>
@@ -18,7 +18,6 @@
 		const get_data = async () => {
 			const res = await fetch('{{domain}}?interval='+interval.value);
 			const data = await res.json();
-			console.log(data)
 			return data;
 		}
 		// generate a random rgba color
@@ -57,7 +56,7 @@
 			ctx.id = 'myChart';
 			var raw_data = await get_data();
 			console.log(raw_data['interval']);
-			var chart_data = process_chart_data(raw_data["data"], raw_data["labels"]);
+			var chart_data = process_chart_data(raw_data.map((data) => data.price), raw_data.map((data) => data.timestamp.slice(5, 10)));
 			month1_dataset = {
 				label: 'month 1 expenses',
 				data: chart_data.data,
