--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<h3>Ligth Wood Laminate6</h3>
 	    <label for="interval">Interval:</label>
-	    <select id="interval" onchange="update_chart(this)">
+	    <select id="interval" onchange="make_chart(this)">
 	    	<option value="WEEK">Week</option>
 	    	<option value="MONTH">Month</option>
 	    	<option value="THREEMONTHS">3 Months</option>
