--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<h3>Ligth Wood Laminate6</h3>
 	    <label for="interval">Interval:</label>
-	    <select id="interval" onchange="make_chart(this)">
+	    <select id="interval" onchange="make_expense_chart(this)">
 	    	<option value="WEEK">Week</option>
 	    	<option value="MONTH">Month</option>
 	    	<option value="THREEMONTHS">3 Months</option>
@@ -119,6 +119,5 @@
 
 		var interval = document.getElementById('interval');
 		var canvasDiv = document.getElementById('canvas_div_id');
-		update_chart()
 	</script>
 {% endblock %}
