--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -23,6 +23,8 @@
 			const data = await res.json();
 			// set the variable
 			raw_expense_data = data["expense_data"]
+			console.log(data["fund_names"])
+			console.log(data["category_names"])
 			return data
 		}
 
