--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -121,6 +121,37 @@
 			} 
 			return chart_data;
 		}
+		// some fancy function, i cant explian it for now
+
+		// find all the indices of the target element
+		const findIndices = (items, target) => {
+			let indices = [];
+			items.forEach((item, index) => {
+				if(target == item){
+					indices.push(index);
+				}
+			})
+			return indices;
+		}
+
+		// get the sum of the elements of a given array of indices
+		const sumElementOfIndices = (array, indices_array) => {
+			let sum = 0;
+			indices_array.forEach((index) => {
+				sum += array[index]
+			})
+			return sum;
+		}
+
+		// find all of the indices of the unique elements of the array
+		const findAllIndices = (items, array) => {
+			let unique = items.filter((e, i, a) => a.indexOf(e) == i);
+			let object = {};
+			items.forEach((item) => {
+				object[item] = sumElementOfIndices(array, findIndices(items, item));
+			})
+			return object;
+		}
 
 		var interval = document.getElementById('interval');
 		var canvasDiv = document.getElementById('canvas_div_id');
