added id and labels for fund control and category control

--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -39,15 +39,24 @@
 
 		const createControls = () => {
 			let fund_control = document.createElement("SELECT")
+			fund_control.id = 'fund-control';
+			// label for fund-control
+			let fund_control_label = document.createElement("LABEL");
+			fund_control_label.htmlFor = fund_control.id;
 			// generate the options
 			createOptions(fund_control, fund_names);
 
 			let category_control = document.createElement("SELECT");
+			category_control.id = 'category-control';
+			let category_control_label = document.createElement("LABEL");
+			category_control_label.htmlFor = category_control.id;
 			createOptions(category_control, category_names)
 
 			// add the select controls to the control-div
 			controlDiv.appendChild(fund_control);
+			controlDiv.appendChild(fund_control_label);
 			controlDiv.appendChild(category_control);
+			controlDiv.appendChild(category_control_label);
 
 		}
 
