--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -43,7 +43,7 @@
 			// label for fund-control
 			let fund_control_label = document.createElement("LABEL");
 			fund_control_label.htmlFor = fund_control.id;
-			fund_control_label.text = "Fund";
+			fund_control_label.innerHTML= "Fund";
 
 			// generate the options
 			createOptions(fund_control, fund_names);
@@ -52,7 +52,7 @@
 			category_control.id = 'category-control';
 			let category_control_label = document.createElement("LABEL");
 			category_control_label.htmlFor = category_control.id;
-			category_control_label.text = "Category"
+			category_control_label.innerHTML = "Category"
 			createOptions(category_control, category_names)
 
 			// add the select controls to the control-div
