--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -66,7 +66,7 @@
 			// and create a row for each expense entry
 			expenses.forEach((expense, i) => {
 				// insert a row on table for each expense entry
-				let row = table.insert(i);
+				let row = table.insertRow(i);
 				// the properties of the expense such as desctription, price, ...etc
 				let expense_properties = Object.keys(expense);
 				expense_properties.forEach((expense_property, j) => {
