--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -71,7 +71,7 @@
 				let expense_properties = Object.keys(expense);
 				expense_properties.forEach((expense_property, j) => {
 					// the value of the expense property i.e. description="pambili ng ulam"
-					let expense_property_value = expense[key];
+					let expense_property_value = expense[expense_property];
 					// add the cells that contain the properties of the expenses
 					let cell = row.insertCell(j);
 					if(expense_property == 'fund'){
