--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -66,7 +66,7 @@
 
 			// table to tabulate all of the expense data
 			let table = document.createElement("TABLE");
-			table.class = "table";
+			table.className = "table";
 			// loop thriugh all the expense data
 			// and create a row for each expense entry
 			expenses.forEach((expense, i) => {
