--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -9,6 +9,7 @@
 	    	<option value="THREEMONTHS">3 Months</option>
 	    </select>
 	    <button id="make_chart_btn" onclick="make_expense_chart(this)">make chart</button>
+	    <button id="make_fund_chart_btn" onclick="make_fund_chart(this)">make chart</button>
 	    <button onclick="createTable(this)">make table</button>
 	<div id="canvas_div_id">
 	</div>
