--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -253,7 +253,7 @@
 			let unique = items.filter((e, i, a) => a.indexOf(e) == i);
 			let object = {label:unique, data:[]};
 			items.forEach((item) => {
-				object[data].push(sumElementOfIndices(array, findIndices(items, item)));
+				object["data"].push(sumElementOfIndices(array, findIndices(items, item)));
 			})
 			return object;
 		}
