--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -134,7 +134,7 @@
 
 		// make a chart for fund and category
 		const make_fund_chart = () => {
-			let expense_data = filterData();
+			let expense_data = raw_expense_data;
 			let chart_data = findAllIndices(expense_data.map((expense) => expense.fund), expense_data.map((expense) => expense.price));
 			make_chart(chart_data, "FUND");
 		}
