--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -255,6 +255,7 @@
 			items.forEach((item) => {
 				object["data"].push(sumElementOfIndices(array, findIndices(items, item)));
 			})
+			console.log(object);
 			return object;
 		}
 
