--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -134,8 +134,11 @@
 
 		// make a chart for fund and category
 		const make_fund_chart = () => {
-			let expense_data = raw_expense_data;
-			let chart_data = findAllIndices(expense_data.map((expense) => expense.fund), expense_data.map((expense) => expense.price));
+			let fund = raw_expense_data.map((expense) => expense.fund);
+			let price = raw_expense_data.map((expense) => expense.price)
+			let chart_data = findAllIndices(fund, price);
+			console.log(fund);
+			console.log(price);
 			make_chart(chart_data, "FUND");
 		}
 
