turned into pie chart

--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -167,7 +167,7 @@
 
 			// the actual chart object
 			var myChart = new Chart(ctx,{
-				type: 'bar',
+				type: 'pie',
 				data: {
 					labels: chart_data.labels,
 					datasets: [dataset]
