--- a/templates/expense_type/create.html
+++ b/templates/expense_type/create.html
@@ -3,13 +3,13 @@
 {% block content %}
 	<div class="card">
 	    <div class="card-header">
-	        <h5 class="card-title">Add new Fund</h5>
+	        <h5 class="card-title">Add new Expense Type</h5>
 	    </div>
 	    <div class="card-body">
 	        <form method="post">
 	            {% csrf_token %}
 	            {{form.as_p}}
-	            <button type="submit" class="btn btn-success">Add Fund</button>
+	            <button type="submit" class="btn btn-success">Add Expense Type</button>
 	        </form>
 	    </div>
 	</div>
